# uav-formations-fyp-2024

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  README_setup_windows.md  install.sh  install_auto.sh  install_px4.sh  setup_windows.ps1  upload_new_setup.bash
__new_drone_setup/: 01-px4-netplan.yaml  50-cloud-init.yaml  install_on_drone.bash
deprecated/: build_and_test.sh
deprecated/2023_fyp/src/catkin_ws/src/data_dissemination_msgs/: CMakeLists.txt  package.xml
deprecated/2023_fyp/src/catkin_ws/src/data_dissemination_msgs/msg/: ListRegisteredProtocolsRequest.msg  ReceivePayloadIndication.msg  RegisterProtocolRequest.msg  TransmitPayloadRequest.msg
docs/: config_setup.md  controller.md  data-dissemination.md  drone-setup.md  flight-test.md  gazebo-simulation.md  tmux.md
drone_gui/: gui.py  main.py  requirements.txt  start_gui.py
messaging_services/: README.md  setup.sh  test.py
px4-autopilot/: install_firmware.bash
ros_services/: cleanup_bag.sh  (+9 more)
swarm_ws/src/controller/: CMakeLists.txt  package.xml
swarm_ws/src/controller/include/controller/: config.hpp  controller_node.hpp  global_pose.hpp  local_pose.hpp  pid_manager.hpp  pose.hpp  ref_point.hpp  state.hpp
swarm_ws/src/controller/src/: config.cpp  controller_node.cpp  global_pose.cpp  local_pose.cpp  main.cpp  pid_manager.cpp  pose.cpp  ref_point.cpp  state.cpp
swarm_ws/src/controller_msgs/: CMakeLists.txt  package.xml
swarm_ws/src/controller_msgs/msg/: ErrorThresholdSet.msg  PidSet.msg  RefPointGlobalPosition.msg  RegisterDrone.msg  StateSet.msg  UpdateDroneList.msg
swarm_ws/src/dcp/: CMakeLists.txt  package.xml
swarm_ws/src/dcp/docs/html/: DatabaseManager_8h_source.html  Helpers_8h_source.html  Types_8h_source.html  VarDisClient_8h_source.html  VarDisQueue_8h_source.html  annotated.html  beaconingClient_8h_source.html  beaconingDataTypes_8h_source.html  classBeaconingClient-members.html  classBeaconingClient.html  classDatabaseManager-members.html  classDatabaseManager.html  classHelpers-members.html  classHelpers.html  classNeighbourTable-members.html  classNeighbourTable.html  classSRPClient-members.html  classSRPClient.html  classVarDisClient-members.html  classVarDisClient.html  classVarDisClient__coll__graph.map  classVarDisClient__coll__graph.md5  classVarDisQueue-members.html  classVarDisQueue.html  classVarDisQueue__coll__graph.md5  classVarDisQueue__inherit__graph.map  classes.html  dir_919092d9d958047153a7abfb320de30d.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  (+121 more)
swarm_ws/src/dcp/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+7 more)
swarm_ws/src/dcp/docs/latex/: annotated.tex  classBeaconingClient.tex  classDatabaseManager.tex  classHelpers.tex  classNeighbourTable.tex  classSRPClient.tex  classVarDisClient.tex  classVarDisClient__coll__graph.md5  classVarDisQueue.tex  classVarDisQueue__inherit__graph.md5  hierarchy.tex  refman.tex  structBPBufferEntry.tex  structBPBufferEntry__coll__graph.md5  structBPClientProtocol.tex  structBPClientProtocol__coll__graph.md5  structBPDroneName.tex  structBPLength.tex  structBPPayloadBlock.tex  structBPPayloadBlockHeader.tex  structBPPayloadBlockHeader__coll__graph.md5  structBPPayloadBlock__coll__graph.md5  structBPProtocolId.tex  structBPQueueingMode.tex  structDBEntry.tex  structDBEntry__coll__graph.md5  structDroneName.tex  structExtendedSafetyData.tex  structExtendedSafetyData__coll__graph.md5  structIEHeader.tex  structIEHeader__coll__graph.md5  structInformationElement.tex  structInformationElement__coll__graph.md5  structReadReturnDetails.tex  structReadReturnDetails__coll__graph.md5  structSRPSequenceNumber.tex  structSafetyData.tex  structSharedNeighbourTableEntry.tex  structSharedNeighbourTableEntry__coll__graph.md5  structTimeStamp.tex  (+5 more)
swarm_ws/src/dcp/include/dcp/: DatabaseManager.h  Helpers.h  Types.h  VarDisClient.h  VarDisQueue.h  beaconingClient.h  beaconingDataTypes.h  srpClient.h  srpDataTypes.h
swarm_ws/src/dcp/launch/: launchDataDisseminationProtocol.xml
swarm_ws/src/dcp/src/: data_dissemination.xml  switch_to_adhoc.sh
swarm_ws/src/dcp/src/beaconing_client/: beaconingClient.cpp  beaconingClientNode.cpp
swarm_ws/src/dcp/src/docs/: README.md
swarm_ws/src/dcp/src/neighbour_table/: neighbourTable.cpp  neighbourTableReader.py
swarm_ws/src/dcp/src/srp_client/: srpClient.cpp  srpClientNode.cpp
swarm_ws/src/dcp/src/variable_dissemination/: DatabaseManager.cpp  Helpers.cpp  VarDisClient.cpp  VarDisClientNode.cpp  VarDisQueue.cpp  main.cpp
swarm_ws/src/lifecycle_controller/: CMakeLists.txt  commands.md  package.xml
swarm_ws/src/lifecycle_controller/include/lifecycle_controller/: action_map.hpp  config_reader.hpp  cooperative.hpp  dropout.hpp  error.hpp  fcu.hpp  input.hpp  lifecycle_class.hpp  state.hpp  status.hpp
swarm_ws/src/lifecycle_controller/src/: action_map.cpp  config_reader.cpp  cooperative.cpp  dropout.cpp  error.cpp  fcu.cpp  input.cpp  lifecycle_class.cpp  main.cpp  state.cpp  status.cpp
swarm_ws/src/logging/: CMakeLists.txt  package.xml
swarm_ws/src/logging/include/logging/: logging.hpp
swarm_ws/src/logging/src/: logging.cpp
swarm_ws/src/shared_packages/: CMakeLists.txt  package.xml
swarm_ws/src/shared_packages/include/shared_packages/: throttled_subscriber.hpp
swarm_ws/src/user_input/: CMakeLists.txt  package.xml
swarm_ws/src/user_input/include/user_input/: user_input.hpp
swarm_ws/src/user_input/src/: user_input.cpp
(+242 files in other folders)
